[gd_scene load_steps=6 format=2]

[ext_resource path="res://TileMap/NormalRes/tile_0107.png" type="Texture" id=1]
[ext_resource path="res://TileMap/NormalRes/tile_0108.png" type="Texture" id=2]
[ext_resource path="res://Molas/MolaCima/MolaCima.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Usada",
"speed": 5.0
} ]

[node name="MolaCima" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 3 )

[node name="HitboxMola" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="HitboxMola"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="AnimResetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="HitboxMola" to="." method="_on_HitboxMola_body_entered"]
[connection signal="timeout" from="AnimResetTimer" to="." method="_on_AnimResetTimer_timeout"]
